# ml-projects

car-price-prediction/: best_model.pkl  car-price-prediction.ipynb  frontend.py  main.py  pyproject.toml
heart_disease_pr/: main.py  pyproject.toml  winsorizer.py
heart_disease_pr/model/: heart_disease_lr2_model.pkl
heart_disease_pr/schema/: heart_dis_schema.py
house_pr/: .env  Banglore-House-Price-Prediction.ipynb  frontend.py  linear_model.pkl  main.py  pyproject.toml
